fix carousel and people table on mobile
git-svn-id: https://svn.apache.org/repos/asf/incubator/ignite/site/trunk@1692997 13f79535-47bb-0310-9956-ffa450edef68

--- a/css/all.css
+++ b/css/all.css
@@ -8207,7 +8207,7 @@ table.formatted > tbody > tr .left {
 
 @media (max-width: 767px) {
   #main table td {
-    margin: 10px 0 0 -110px !important;
+    margin: 10px 0 5px -110px !important;
     white-space: normal !important;
   }
 }
@@ -8225,7 +8225,6 @@ table.formatted > tbody > tr .left {
 @media (max-width: 767px) {
   #main table {
     margin: 0 0 20px 0 !important;
-    border: 1px solid #ddd !important;
   }
 }
 
@@ -8313,5 +8312,26 @@ section.usecase-page-section .first {
   iframe {
     width: auto;
     height: auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .carousel .carousel-control {
+    visibility: hidden;
+  }
+}
+
+@media (max-width: 767px) {
+  .carousel {
+    min-height: 300px !important;
+  }
+}
+
+@media (max-width: 767px) {
+  #people .col-xs-12 {
+    padding-right: 0px !important;
+  }
+  #people .col-xs-12 table.formatted.committers > tbody > tr > td:nth-child(odd) {
+    font-weight: 500;
   }
 }
