--- a/scss/ignite.scss
+++ b/scss/ignite.scss
@@ -703,27 +703,26 @@ table.formatted {
 #main table {
     & td {
         @media (max-width: $mobile) {
-              margin: 10px 0 0 -110px !important;
+              margin: 10px 0 5px -110px !important;
               white-space: normal !important;
         }
 
         & ul {
             @media (max-width: $mobile) {
-                  padding:0 0 0 20px ! important;
-                  margin-right: 5px;
+                padding:0 0 0 20px ! important;
+                margin-right: 5px;
             }
         }
     }
 
     & tr:nth-child(odd) td {
         @media (max-width: $mobile) {
-          background-color: white;
+            background-color: white;
         }
     }
 
     @media (max-width: $mobile) {
-          margin: 0 0 20px 0 !important;
-          border: 1px solid #ddd !important;
+        margin: 0 0 20px 0 !important;
     }
 }
 
@@ -814,4 +813,28 @@ iframe {
        width : auto;
        height: auto;
    }
+}
+
+.carousel .carousel-control {
+    @media (max-width: $mobile) {
+        visibility: hidden;
+    }
+}
+
+.carousel {
+    @media (max-width: $mobile) {
+        min-height: 300px !important;
+    }
+}
+
+#people {
+    & .col-xs-12 {
+        @media (max-width: $mobile) {
+            padding-right: 0px !important;
+
+            & table.formatted.committers > tbody> tr > td:nth-child(odd) {
+                font-weight: 500;
+            }
+        }
+    }
 }
